# rustyguard

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  e2e.yml
benches/: cookie.rs  mac.rs  roundtrip.rs
examples/: server.rs  tun.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: anti_replay.rs  recv_message.rs
rustyguard-aws-lc/: Cargo.toml  Cross.toml  README.md  build.rs
rustyguard-aws-lc/src/: aead.rs  agreement.rs  buffer.rs  cipher.rs  debug.rs  encoding.rs  error.rs  evp_pkey.rs  hex.rs  iv.rs  lib.rs  ptr.rs  rand.rs  test.rs
rustyguard-aws-lc/src/aead/: aead_ctx.rs  chacha.rs  chacha20_poly1305_openssh.rs  nonce.rs  poly1305.rs  unbound_key.rs  xchacha.rs
rustyguard-aws-lc/src/agreement/: ephemeral.rs
rustyguard-aws-lc/src/agreement/data/: agreement_tests.txt
rustyguard-aws-lc/src/cipher/: block.rs  chacha.rs  key.rs  streaming.rs
rustyguard-aws-lc/tests/: aead_test.rs  basic_aead_test.rs
rustyguard-core/: Cargo.toml
rustyguard-core/benches/: roundtrip.rs
rustyguard-core/examples/: server.rs  tun.rs
rustyguard-core/src/: handshake.rs  lib.rs  time.rs
rustyguard-core/src/snapshots/: rustyguard_core__tests__snapshot-2.snap  rustyguard_core__tests__snapshot-3.snap  rustyguard_core__tests__snapshot.snap
rustyguard-crypto/: Cargo.toml
rustyguard-crypto/benches/: cookie.rs  handshake.rs  mac.rs
rustyguard-crypto/src/: anti_replay.rs  lib.rs  prim.rs  xchacha20.rs
rustyguard-crypto/src/snapshots/: rustyguard_crypto__prim__tests__hash_snapshot.snap  rustyguard_crypto__prim__tests__mac_snapshot.snap  rustyguard_crypto__tests__handshake-2.snap  rustyguard_crypto__tests__handshake-3.snap  rustyguard_crypto__tests__handshake-4.snap  rustyguard_crypto__tests__handshake-5.snap  rustyguard_crypto__tests__handshake-6.snap  rustyguard_crypto__tests__handshake-7.snap  rustyguard_crypto__tests__handshake.snap
rustyguard-tun/: .gitignore  Cargo.toml
rustyguard-tun/src/: lib.rs  main.rs
rustyguard-tun/src/tun/: address.rs  configuration.rs  device.rs  error.rs  mod.rs
rustyguard-tun/src/tun/async/: device.rs  mod.rs
rustyguard-tun/src/tun/platform/: mod.rs
rustyguard-tun/src/tun/platform/linux/: device.rs  mod.rs  sys.rs
rustyguard-tun/src/tun/platform/macos/: device.rs  mod.rs  sys.rs
rustyguard-tun/src/tun/platform/posix/: fd.rs  mod.rs  sockaddr.rs
rustyguard-tun/test-data/: rg.conf  rg.conf.tmpl  wg.conf  wg.conf.tmpl
rustyguard-types/: Cargo.toml
rustyguard-types/src/: lib.rs
rustyguard-utils/: Cargo.toml
rustyguard-utils/src/: anti_replay.rs  async_convert.rs  lib.rs  rate_limiter.rs
src/: anti_replay.rs  crypto.rs  lib.rs  messages.rs  noise_lc.rs  utils.rs
src/snapshots/: rustyguard__crypto__tests__hkdf_snapshot.snap  rustyguard__tests__snapshot-2.snap  rustyguard__tests__snapshot-3.snap  rustyguard__tests__snapshot.snap
tests/e2e/: README.md  conftest.py  pyproject.toml
tests/e2e/rustyguard_e2e/: __init__.py  build.py  cli.py  config.py  iperf.py  provider.py  registry.py
tests/e2e/rustyguard_e2e/providers/: __init__.py  lima.py  multipass.py  orb.py
tests/e2e/tests/: __init__.py  test_handshake.py  test_soak.py  test_throughput.py
wg-proxy/: Cargo.toml  README.md
wg-proxy/src/: main.rs
