[package]
name = "rustyguard"
version = "0.1.0"
edition = "2021"

[dependencies]
zeroize = "1.8"
ipnet = "2.9"
blake2 = "0.10.6"
siphasher = "1"
bytemuck = { version = "1", features = ["derive"] }
hkdf = "0.12.4"
tai64 = "4.0.0"
x25519-dalek = { version = "2.0.1", features = ["getrandom", "static_secrets"] }
chacha20poly1305 = "0.10.1"
subtle = "2.6"
rand = "0.8"
rustc-hash = "2"

[dev-dependencies]
base64ct = { version = "1", features = ["std"] }
clap = { version = "4", features = ["derive"] }
