[package]
name = "rustyguard"
version = "0.1.0"
edition = "2021"

[dependencies]
blake2 = { version = "0.10", default-features = false }
bytemuck = { version = "1", features = ["derive"] }
chacha20poly1305 = { version = "0.10", default-features = false }
hashbrown = { version = "0.14", default-features = false }
hmac = "0.12"
# ipnet = { version = "2.9", default-features = false }
rand = { version = "0.8", default-features = false, features = ["std_rng"] }
rustc-hash = { version = "2", default-features = false }
subtle = { version = "2.6", default-features = false }
tai64 = { version = "4.0", default-features = false }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
zeroize = "1.8"

[dev-dependencies]
base64ct = { version = "1", features = ["std"] }
tai64 = { version = "4.0", features = ["std"] }
rand = { version = "0.8", features = ["getrandom"] }

# server example
clap = { version = "4", features = ["derive"] }
packet = "0.1"

# tun example
tun = { version = "0.6", features = ["async"] }
tokio = { version = "1", features = ["full"] }
knuffel = { version = "3.2.0" }
miette = { version="5.10", features=["fancy"] }
ipnet = { version = "2.9" }
iptrie = "0.8"
