[package]
name = "rustyguard-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rand = { version = "0.9", default-features = false, features = ["std_rng"] }

[dependencies.rustyguard-core]
path = "../rustyguard-core"
[dependencies.rustyguard-types]
path = "../rustyguard-types"
[dependencies.rustyguard-crypto]
path = "../rustyguard-crypto"
[dependencies.rustyguard-utils]
path = "../rustyguard-utils"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "anti_replay"
path = "fuzz_targets/anti_replay.rs"
test = false
doc = false

[[bin]]
name = "recv_message"
path = "fuzz_targets/recv_message.rs"
test = false
doc = false
