[package]
name = "rustyguard-aws-lc"
version = "0.1.0"
edition = "2021"
# Exclude tests and test data from published crate
exclude = [
    "third_party/NIST/*",
    "tests/**/*",
    "*.txt",
    "*.p8",
    "*.der",
    "*.bin",
]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
features = ["unstable"]

[dependencies]
aws-lc-sys = { version = "0.21.0" }
rand_core = "0.6"
zeroize = "1.7"

[dev-dependencies]
hex = "0.4.3"
rand = "0.8"
regex = "1.10.6"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(rustyguard_unsafe_logging)',
] }
