[package]
name = "rustyguard-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rustyguard-crypto = { version = "0.1", path = "../rustyguard-crypto" }
rustyguard-types = { version = "0.1", path = "../rustyguard-types" }
rustyguard-utils = { version = "0.1", path = "../rustyguard-utils" }

hashbrown = { version = "0.14", default-features = false }
rand = { version = "0.9", default-features = false, features = ["std_rng"] }
foldhash = { version = "0.1", default-features = false }
tai64 = { version = "4.0", default-features = false, features = ["zeroize"] }
zerocopy = { version = "0.8", features = ["derive"] }
zeroize = "1.8"

[dev-dependencies]
divan = "0.1.14"
base64ct = { version = "1", features = ["std"] }
tai64 = { version = "4.0", features = ["std"] }
rand = { version = "0.9", features = [] }
insta = "1.39.0"

# server example
clap = { version = "4", features = ["derive"] }
packet = "0.1"

[[bench]]
name = "roundtrip"
harness = false

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(rustyguard_unsafe_logging)'] }
