[package]
name = "rustyguard-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
rustyguard-types = { version = "0.1", path = "../rustyguard-types" }
rustyguard-utils = { version = "0.1", path = "../rustyguard-utils" }

# crypto
# rustyguard-aws-lc = { version = "0.1", path = "../rustyguard-aws-lc" }
blake2s_simd = { version = "1.0", default-features = false }

# crypto adjacent
zeroize = { version = "1.8", features = ["zeroize_derive"] }

# other helpful things
rand_core = { version = "0.6", default-features = false }
tai64 = { version = "4.0", default-features = false, features = ["zeroize"] }
zerocopy = { version = "0.8", features = ["derive"] }
graviola = { version = "=0.2.0-alpha.2", features = [], git="https://github.com/ctz/graviola", branch = "main" }

[dev-dependencies]
divan = "0.1.14"
rand = { version = "0.8", features = ["getrandom"] }
tai64 = { version = "4.0", default-features = false, features = ["std"] }
insta = "1.39.0"

[[bench]]
name = "mac"
harness = false

[[bench]]
name = "cookie"
harness = false

[[bench]]
name = "handshake"
harness = false

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(rustyguard_unsafe_logging)',
] }
