[package]
name = "wg-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
rustyguard-crypto = { version = "0.1", path = "../rustyguard-crypto" }
rustyguard-types = { version = "0.1", path = "../rustyguard-types" }

hashbrown = { version = "0.14", default-features = false }
rustc-hash = { version = "2", default-features = false }
zerocopy = { version = "0.7.35", features = ["derive"] }
zeroize = "1.8"

tai64 = { version = "4.0", features = ["std"] }
rand = { version = "0.8", features = ["getrandom"] }
tokio = { version = "1", features = ["full"] }
ipnet = { version = "2.9" }
iptrie = "0.8"
