[package]
name = "wg-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
rustyguard-crypto = { version = "0.1", path = "../rustyguard-crypto" }
rustyguard-types = { version = "0.1", path = "../rustyguard-types" }

dashmap = "6"
subtle = { version = "2.6", default-features = false }
slotmap = "1"
rand = { version = "0.8", features = ["getrandom"] }
tokio = { version = "1", features = ["full"] }
sharded-slab = "0.1"
