[project]
name = "rustyguard-e2e"
version = "0.1.0"
description = "End-to-end VM-based tests for rustyguard."
requires-python = ">=3.11"
dependencies = [
    "pytest>=8,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rustyguard_e2e"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
